[package]
name = "tokio-rustls"
version = "0.26.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustls/tokio-rustls"
homepage = "https://github.com/rustls/tokio-rustls"
documentation = "https://docs.rs/tokio-rustls"
readme = "README.md"
description = "Asynchronous TLS/SSL streams for Tokio using Rustls."
categories = ["asynchronous", "cryptography", "network-programming"]
edition = "2021"
rust-version = "1.81.0"
exclude = ["/.github", "/examples", "/scripts"]

[dependencies]
tokio = "1.40.0"
rustls = { version = "0.23.15", default-features = false, features = ["std", "brotli", "std"] }
pki-types = { package = "rustls-pki-types", version = "1.10.0" }
brotli = "7.0.0"
brotli-decompressor = "4.0.1"

[features]
default = ["logging", "tls12", "ring"]
aws_lc_rs = ["rustls/aws_lc_rs"]
aws-lc-rs = ["aws_lc_rs"] # Alias because Cargo features commonly use `-`
early-data = []
fips = ["rustls/fips"]
logging = ["rustls/logging"]
ring = ["rustls/ring"]
tls12 = ["rustls/tls12"]

[dev-dependencies]
argh = "0.1.12"
rcgen = { version = "0.13.1", features = ["pem"] }
tokio = { version = "1.40.0", features = ["full"] }
futures-util = "0.3.31"
lazy_static = "1.5.0"
webpki-roots = "0.26.6"
rustls-pemfile = "2.2.0"
