[package]
name = "tokio-rustls"
version = "0.26.2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustls/tokio-rustls"
homepage = "https://github.com/rustls/tokio-rustls"
documentation = "https://docs.rs/tokio-rustls"
readme = "README.md"
description = "Asynchronous TLS/SSL streams for Tokio using Rustls."
categories = ["asynchronous", "cryptography", "network-programming"]
edition = "2024"
rust-version = "1.90"
exclude = ["/.github", "/examples", "/scripts"]

[dependencies]
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
tokio = "1"

[features]
prefer-post-quantum = ["rustls/prefer-post-quantum"]
brotli = ["rustls/brotli"]
logging = ["rustls/logging"]
zlib = ["rustls/zlib"]
aws_lc_rs = ["rustls/aws_lc_rs"]
aws-lc-rs = ["aws_lc_rs"] # Alias because Cargo features commonly use `-`
early-data = []
ring = ["rustls/ring"]
tls12 = ["rustls/tls12"]

[dev-dependencies]
argh = "0.1.13"
futures-util = "0.3.31"
lazy_static = "1.5.0"
rcgen = { version = "0.14", features = ["pem"] }
tokio = { version = "1", features = ["full"] }
webpki-roots = "1"
